# template-rs

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .gitlint  .markdownlint.yaml  .stignore  .yamlfmt  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Makefile.lib.toml  Makefile.toml  Makefile.workspaces.toml  README.md  TESTING.md  build.rs  clippy.toml  rust-toolchain.toml  rustfmt.toml  test_makefile_logic.md
.cargo/: config.toml
contrib/scripts/: complete-dind-setup.sh  fetch-issues.sh  generate-patch.sh  gnu-toolchain-ubuntu-setup.sh  merge-selective.sh  musl-toolchain-ubuntu-setup.sh  pr-cmt.sh  setup-docker.sh
examples/: demo.rs
scripts/: musl-toolchain-ubuntu-setup.sh
src/: lib.rs  main.rs
src/cmd/: mod.rs
tests/: basic.rs  cli.rs
