[package]
name = "template-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "template"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", default-features = false, features = [
    "derive",
    "cargo",
    "std",
    "color",
    "env",
    "help",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
miette = { version = "7.5.0", default-features = false , features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
thiserror = "2.0.12"
tonic = { version = "0.13.0", features = ["tls-ring", "transport"] }
num_cpus = "1.16.0"
async-trait = "0.1.88"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
derive_builder = "0.20.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
serial_test = "2.0"

[build-dependencies]
gix = { version = "0.72.1" , features = ["basic"]}
gix-ref = "0.52.1"
chrono = "0.4"
rustc_version = "0.4"
version_check = "0.9.4"
rustversion = "1.0.14"

[features]
default = ["static"]
static = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true


[lints.rust]
unused = "allow"

[lints.clippy]
enum_glob_use = "deny"

[badges]
maintenance = { status = "actively-developed" }



